// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class=

        {
          display: flex;
          flex-direction: column;
          width: 300px;
        }
  >
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone141"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                one
              </span>
              <div
                hidden=""
                id="tooltip142"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                one
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              1,543
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone143"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="one"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=


                data-is-focusable="true"
                fill="#004b50"
                height="12"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone144"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                two
              </span>
              <div
                hidden=""
                id="tooltip145"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                two
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              800
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone146"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="two"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=


                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone147"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                three
              </span>
              <div
                hidden=""
                id="tooltip148"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                three
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              8,888
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone149"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="three"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=


                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class=

        {
          display: flex;
          flex-direction: column;
          width: 300px;
        }
  >
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone151"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                one
              </span>
              <div
                hidden=""
                id="tooltip152"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                one
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              1,543
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone153"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="one"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=


                data-is-focusable="true"
                fill="#004b50"
                height="12"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone154"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                two
              </span>
              <div
                hidden=""
                id="tooltip155"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                two
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              800
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone156"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="two"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=


                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone157"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                three
              </span>
              <div
                hidden=""
                id="tooltip158"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                three
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              8,888
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone159"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="three"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=


                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background: #1b1a19;
          color: #f3f2f1;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      class=

          {
            display: flex;
            flex-direction: column;
            width: 100%;
          }
    >
      <div>
        <div
          class=

              {
                margin-bottom: 10px;
              }
        >
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
            data-focuszone-id="FocusZone164"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <div
              class=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    justify-content: space-between;
                  }
            >
              <div
                class=
                    ms-TooltipHost
                    {
                      color: #f3f2f1;
                      display: block;
                      margin-bottom: 5px;
                      overflow: hidden;
                      text-overflow: ellipsis;
                      white-space: nowrap;
                    }
                role="none"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                  tabindex="-1"
                >
                  one
                </span>
                <div
                  hidden=""
                  id="tooltip165"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  one
                </div>
              </div>
              <div
                class=

                    {
                      color: #f3f2f1;
                      font-size: 14px;
                      font-weight: 600;
                    }
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                1,543
              </div>
            </div>
          </div>
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
                {
                  padding-right: 0px;
                }
            data-focuszone-id="FocusZone166"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <svg
              aria-label="one"
              class=

                  {
                    display: block;
                    height: 12px;
                    overflow: visible;
                    width: 100%;
                  }
              focusable="false"
            >
              <g
                id="_HorizontalLine_lllllm_0"
              >
                <rect
                  aria-label="2020/04/30, 10%."
                  class=


                  data-is-focusable="true"
                  fill="#004b50"
                  height="12"
                  role="img"
                  tabindex="0"
                  width="10.286666666666665%"
                  x="0%"
                  y="0"
                />
                <rect
                  aria-label="13457/15000."
                  class=


                  data-is-focusable="false"
                  fill="#292827"
                  height="12"
                  role="img"
                  tabindex="-1"
                  width="89.71333333333334%"
                  x="10.286666666666665%"
                  y="0"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div>
        <div
          class=

              {
                margin-bottom: 10px;
              }
        >
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
            data-focuszone-id="FocusZone167"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <div
              class=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    justify-content: space-between;
                  }
            >
              <div
                class=
                    ms-TooltipHost
                    {
                      color: #f3f2f1;
                      display: block;
                      margin-bottom: 5px;
                      overflow: hidden;
                      text-overflow: ellipsis;
                      white-space: nowrap;
                    }
                role="none"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                  tabindex="-1"
                >
                  two
                </span>
                <div
                  hidden=""
                  id="tooltip168"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  two
                </div>
              </div>
              <div
                class=

                    {
                      color: #f3f2f1;
                      font-size: 14px;
                      font-weight: 600;
                    }
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                800
              </div>
            </div>
          </div>
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
                {
                  padding-right: 0px;
                }
            data-focuszone-id="FocusZone169"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <svg
              aria-label="two"
              class=

                  {
                    display: block;
                    height: 12px;
                    overflow: visible;
                    width: 100%;
                  }
              focusable="false"
            >
              <g
                id="_HorizontalLine_lllllm_1"
              >
                <rect
                  aria-label="2020/04/30, 5%."
                  class=


                  data-is-focusable="true"
                  fill="#5c2d91"
                  height="12"
                  role="img"
                  tabindex="0"
                  width="5.333333333333334%"
                  x="0%"
                  y="0"
                />
                <rect
                  aria-label="14200/15000."
                  class=


                  data-is-focusable="false"
                  fill="#292827"
                  height="12"
                  role="img"
                  tabindex="-1"
                  width="94.66666666666667%"
                  x="5.333333333333334%"
                  y="0"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div>
        <div
          class=

              {
                margin-bottom: 10px;
              }
        >
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
            data-focuszone-id="FocusZone170"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <div
              class=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    justify-content: space-between;
                  }
            >
              <div
                class=
                    ms-TooltipHost
                    {
                      color: #f3f2f1;
                      display: block;
                      margin-bottom: 5px;
                      overflow: hidden;
                      text-overflow: ellipsis;
                      white-space: nowrap;
                    }
                role="none"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                  tabindex="-1"
                >
                  three
                </span>
                <div
                  hidden=""
                  id="tooltip171"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  three
                </div>
              </div>
              <div
                class=

                    {
                      color: #f3f2f1;
                      font-size: 14px;
                      font-weight: 600;
                    }
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                8,888
              </div>
            </div>
          </div>
          <div
            class=
                ms-FocusZone
                &:focus {
                  outline: none;
                }
                {
                  padding-right: 0px;
                }
            data-focuszone-id="FocusZone172"
            data-tabster="{\\"uncontrolled\\": {}}"
          >
            <svg
              aria-label="three"
              class=

                  {
                    display: block;
                    height: 12px;
                    overflow: visible;
                    width: 100%;
                  }
              focusable="false"
            >
              <g
                id="_HorizontalLine_lllllm_2"
              >
                <rect
                  aria-label="2020/04/30, 59%."
                  class=


                  data-is-focusable="true"
                  fill="#a4262c"
                  height="12"
                  role="img"
                  tabindex="0"
                  width="59.25333333333334%"
                  x="0%"
                  y="0"
                />
                <rect
                  aria-label="6112/15000."
                  class=


                  data-is-focusable="false"
                  fill="#292827"
                  height="12"
                  role="img"
                  tabindex="-1"
                  width="40.74666666666666%"
                  x="59.25333333333334%"
                  y="0"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <span
        class="ms-layer"
      />
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center; height: 100%;"
  >
    <div
      aria-label="Graph has no data to display"
      id="_Chart_empty_174"
      role="alert"
      style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 10px;"
    >
      <div
        style="display: flex; justify-content: center; align-items: center; height: 100%;"
      >
        <svg
          fill="none"
          height="280"
          viewBox="0 0 512 513"
          width="350"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="url(#paint0_linear_3061_1044)"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <rect
            fill="url(#paint1_radial_3061_1044)"
            fill-opacity="0.4"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <rect
            fill="url(#paint2_radial_3061_1044)"
            fill-opacity="0.4"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <rect
            fill="url(#paint3_radial_3061_1044)"
            fill-opacity="0.4"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <rect
            fill="url(#paint4_radial_3061_1044)"
            fill-opacity="0.5"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <rect
            fill="url(#paint5_radial_3061_1044)"
            fill-opacity="0.6"
            height="207"
            rx="20"
            width="289"
            x="163"
            y="184.5"
          />
          <circle
            cx="413.399"
            cy="182.51"
            fill="url(#paint6_linear_3061_1044)"
            r="26.8141"
          />
          <circle
            cx="167.5"
            cy="186"
            fill="url(#paint7_radial_3061_1044)"
            r="103.5"
          />
          <circle
            cx="167.5"
            cy="186"
            fill="url(#paint8_radial_3061_1044)"
            fill-opacity="0.3"
            r="103.5"
          />
          <circle
            cx="167.5"
            cy="186"
            fill="url(#paint9_radial_3061_1044)"
            fill-opacity="0.3"
            r="103.5"
          />
          <path
            clip-rule="evenodd"
            d="M167.5 289.5C224.661 289.5 271 243.161 271 186C271 185.499 270.996 184.999 270.989 184.5L183 184.5C171.954 184.5 163 193.454 163 204.5V289.404C164.492 289.468 165.992 289.5 167.5 289.5Z"
            fill="url(#paint10_radial_3061_1044)"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M167.5 289.5C224.661 289.5 271 243.161 271 186C271 185.499 270.996 184.999 270.989 184.5L183 184.5C171.954 184.5 163 193.454 163 204.5V289.404C164.492 289.468 165.992 289.5 167.5 289.5Z"
            fill="url(#paint11_radial_3061_1044)"
            fill-opacity="0.5"
            fill-rule="evenodd"
          />
          <rect
            fill="url(#paint12_linear_3061_1044)"
            height="12.9036"
            rx="6.4518"
            transform="rotate(-45.711 225.682 331.383)"
            width="87"
            x="225.682"
            y="331.383"
          />
          <rect
            fill="url(#paint13_linear_3061_1044)"
            height="13.8648"
            rx="6.93238"
            transform="rotate(-66.6421 351.271 319.003)"
            width="136.536"
            x="351.271"
            y="319.003"
          />
          <rect
            fill="url(#paint14_linear_3061_1044)"
            height="12.9036"
            rx="6.4518"
            transform="matrix(-0.725165 -0.688575 -0.688575 0.725165 366.98 330.023)"
            width="87"
          />
          <circle
            cx="238.64"
            cy="325.73"
            fill="url(#paint15_radial_3061_1044)"
            r="21"
          />
          <circle
            cx="238.64"
            cy="325.73"
            fill="url(#paint16_radial_3061_1044)"
            fill-opacity="0.5"
            r="21"
          />
          <circle
            cx="238.64"
            cy="325.73"
            fill="url(#paint17_radial_3061_1044)"
            fill-opacity="0.8"
            r="21"
          />
          <circle
            cx="293.671"
            cy="271.73"
            fill="url(#paint18_radial_3061_1044)"
            r="21"
          />
          <circle
            cx="293.671"
            cy="271.73"
            fill="url(#paint19_radial_3061_1044)"
            fill-opacity="0.5"
            r="21"
          />
          <circle
            cx="293.671"
            cy="271.73"
            fill="url(#paint20_radial_3061_1044)"
            fill-opacity="0.8"
            r="21"
          />
          <circle
            cx="356.313"
            cy="325.618"
            fill="url(#paint21_radial_3061_1044)"
            r="21"
          />
          <circle
            cx="356.313"
            cy="325.618"
            fill="url(#paint22_radial_3061_1044)"
            fill-opacity="0.8"
            r="21"
          />
          <path
            d="M439.968 186.15C438.192 199.237 426.974 209.324 413.399 209.324C399.26 209.324 387.676 198.38 386.658 184.5H432C434.832 184.5 437.527 185.089 439.968 186.15Z"
            fill="url(#paint23_radial_3061_1044)"
          />
          <path
            d="M439.968 186.15C438.192 199.237 426.974 209.324 413.399 209.324C399.26 209.324 387.676 198.38 386.658 184.5H432C434.832 184.5 437.527 185.089 439.968 186.15Z"
            fill="url(#paint24_radial_3061_1044)"
          />
          <path
            d="M439.968 186.15C438.192 199.237 426.974 209.324 413.399 209.324C399.26 209.324 387.676 198.38 386.658 184.5H432C434.832 184.5 437.527 185.089 439.968 186.15Z"
            fill="url(#paint25_radial_3061_1044)"
            fill-opacity="0.8"
          />
          <path
            d="M439.968 186.15C438.192 199.237 426.974 209.324 413.399 209.324C399.26 209.324 387.676 198.38 386.658 184.5H432C434.832 184.5 437.527 185.089 439.968 186.15Z"
            fill="url(#paint26_radial_3061_1044)"
            fill-opacity="0.5"
          />
          <path
            clip-rule="evenodd"
            d="M271 182.5V184.5H272.99C272.996 184.999 273 185.499 273 186C273 244.266 225.766 291.5 167.5 291.5C165.993 291.5 164.492 291.468 163 291.406V289.404L161 289.308V204.5C161 192.35 170.85 182.5 183 182.5H271ZM163 204.5V289.404C164.492 289.468 165.992 289.5 167.5 289.5C224.661 289.5 271 243.161 271 186C271 185.499 270.996 184.999 270.989 184.5H183C171.954 184.5 163 193.454 163 204.5Z"
            fill="#F2F1F3"
            fill-rule="evenodd"
          />
          <circle
            cx="204.25"
            cy="211.988"
            fill="#B154FF"
            r="3.5"
          />
          <circle
            cx="107"
            cy="130.238"
            fill="#D6A5FF"
            r="3.5"
          />
          <circle
            cx="224.25"
            cy="164.738"
            fill="#D6A5FF"
            r="3.5"
          />
          <circle
            cx="180.75"
            cy="122.238"
            fill="#D6A5FF"
            r="2.5"
          />
          <circle
            cx="207.75"
            cy="163.738"
            fill="#D6A5FF"
            r="2.5"
          />
          <circle
            cx="118.25"
            cy="226.238"
            fill="#D6A5FF"
            r="2.5"
          />
          <circle
            cx="90.75"
            cy="185.994"
            fill="#D6A5FF"
            r="2.5"
          />
          <circle
            cx="137.25"
            cy="148.244"
            fill="#D6A5FF"
            r="1"
          />
          <circle
            cx="164.633"
            cy="165.238"
            fill="#D6A5FF"
            r="1.5"
          />
          <circle
            cx="167.633"
            cy="107.738"
            fill="#D6A5FF"
            r="1.5"
          />
          <circle
            cx="240.273"
            cy="159.244"
            fill="#D6A5FF"
            r="1.5"
          />
          <circle
            cx="232.023"
            cy="150.744"
            fill="#D6A5FF"
            r="1.5"
          />
          <circle
            cx="124.75"
            cy="243.822"
            fill="#D6A5FF"
            r="1.5"
          />
          <circle
            cx="124.75"
            cy="153.744"
            fill="#D6A5FF"
            r="4"
          />
          <circle
            cx="223.25"
            cy="252.994"
            fill="#B154FF"
            r="3.5"
          />
          <circle
            cx="215.25"
            cy="239.822"
            fill="#B154FF"
            r="2.5"
          />
          <circle
            cx="183.25"
            cy="205.988"
            fill="#B154FF"
            r="2.5"
          />
          <circle
            cx="178.25"
            cy="263.488"
            fill="#B154FF"
            r="2.5"
          />
          <circle
            cx="247.75"
            cy="209.988"
            fill="#B154FF"
            r="2.5"
          />
          <circle
            cx="227.75"
            cy="210.988"
            fill="#B154FF"
            r="1"
          />
          <circle
            cx="257"
            cy="203.488"
            fill="#B154FF"
            r="1"
          />
          <circle
            cx="213.75"
            cy="264.488"
            fill="#B154FF"
            r="1"
          />
          <circle
            cx="193"
            cy="233.238"
            fill="#B154FF"
            r="1"
          />
          <circle
            cx="179.25"
            cy="248.494"
            fill="#B154FF"
            r="1"
          />
          <circle
            cx="184.75"
            cy="255.494"
            fill="#B154FF"
            r="1"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_3061_1044"
              x1="434.485"
              x2="241.505"
              y1="171.399"
              y2="579.253"
            >
              <stop
                offset="0.367698"
                stop-color="#E7E7E7"
              />
              <stop
                offset="0.713542"
                stop-color="#C9F5FF"
              />
            </lineargradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(233.5 339.994) rotate(28.7059) scale(23.9426 38.6494)"
              gradientUnits="userSpaceOnUse"
              id="paint1_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.322917"
                stop-color="#6E7B83"
              />
              <stop
                offset="0.713542"
                stop-color="#9EA8AE"
              />
              <stop
                offset="0.957884"
                stop-color="#E4E9EA"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(288.5 284.994) rotate(23.8387) scale(23.5053 37.9435)"
              gradientUnits="userSpaceOnUse"
              id="paint2_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.322917"
                stop-color="#6E7B83"
              />
              <stop
                offset="0.713542"
                stop-color="#9EA8AE"
              />
              <stop
                offset="0.957884"
                stop-color="#E4E9EA"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(347.5 339.994) rotate(30.9637) scale(23.3238 37.4462)"
              gradientUnits="userSpaceOnUse"
              id="paint3_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.332951"
                stop-color="#6E7B83"
              />
              <stop
                offset="0.708333"
                stop-color="#9EA8AE"
              />
              <stop
                offset="1"
                stop-color="#DFEBEE"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(401.5 196.994) rotate(35.4171) scale(27.6089 42.0078)"
              gradientUnits="userSpaceOnUse"
              id="paint4_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.332951"
                stop-color="#949494"
              />
              <stop
                offset="0.737958"
                stop-color="#BDBDBD"
              />
              <stop
                offset="0.931599"
                stop-color="#E7E7E7"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(180.5 227) rotate(82.0811) scale(134.28 139.451)"
              gradientUnits="userSpaceOnUse"
              id="paint5_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.521657"
                stop-color="#9EA8AE"
              />
              <stop
                offset="0.684443"
                stop-color="#D4F0F7"
                stop-opacity="0"
              />
            </radialgradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint6_linear_3061_1044"
              x1="436.963"
              x2="377.489"
              y1="152.302"
              y2="242.334"
            >
              <stop
                offset="0.267843"
                stop-color="#E7E7E7"
              />
              <stop
                offset="0.713542"
                stop-color="#C9F5FF"
              />
            </lineargradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(167.5 147.006) rotate(165.746) scale(203.557 221.888)"
              gradientUnits="userSpaceOnUse"
              id="paint7_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.46884"
                stop-color="#FFEFE2"
              />
              <stop
                offset="0.906523"
                stop-color="#FFF7F1"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(146.435 221.376) rotate(-35.1972) scale(243.886 275.366)"
              gradientUnits="userSpaceOnUse"
              id="paint8_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.440888"
                stop-color="#E7C0A8"
                stop-opacity="0"
              />
              <stop
                offset="0.540596"
                stop-color="#B59174"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(167.5 289.506) rotate(-90) scale(184.536 61.2688)"
              gradientUnits="userSpaceOnUse"
              id="paint9_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.255305"
                stop-color="#B59174"
              />
              <stop
                offset="0.728744"
                stop-color="#E7C0A8"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(168.261 261.801) rotate(-45.3951) scale(248.654 306.794)"
              gradientUnits="userSpaceOnUse"
              id="paint10_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.187649"
                stop-color="#FFD84E"
              />
              <stop
                offset="0.369792"
                stop-color="#FE843A"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(217 184.5) rotate(-180) scale(125.534 55.7931)"
              gradientUnits="userSpaceOnUse"
              id="paint11_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.330298"
                stop-color="#C84B00"
              />
              <stop
                offset="0.607194"
                stop-color="#FF853B"
                stop-opacity="0"
              />
            </radialgradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint12_linear_3061_1044"
              x1="265.238"
              x2="264.913"
              y1="316.105"
              y2="346.126"
            >
              <stop
                offset="0.597549"
                stop-color="#E2D7CF"
              />
              <stop
                offset="0.739583"
                stop-color="#D5BFAF"
              />
              <stop
                offset="0.832491"
                stop-color="#B89F8C"
              />
              <stop
                offset="0.933497"
                stop-color="#CEBCAF"
              />
              <stop
                offset="1"
                stop-color="#E2D7CF"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint13_linear_3061_1044"
              x1="413.35"
              x2="413.111"
              y1="302.587"
              y2="334.846"
            >
              <stop
                offset="0.597549"
                stop-color="#E2D7CF"
              />
              <stop
                offset="0.739583"
                stop-color="#D5BFAF"
              />
              <stop
                offset="0.832491"
                stop-color="#B89F8C"
              />
              <stop
                offset="0.933497"
                stop-color="#CEBCAF"
              />
              <stop
                offset="1"
                stop-color="#E2D7CF"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint14_linear_3061_1044"
              x1="39.5559"
              x2="39.2316"
              y1="-15.2778"
              y2="14.7428"
            >
              <stop
                offset="0.597549"
                stop-color="#E2D7CF"
              />
              <stop
                offset="0.739583"
                stop-color="#D5BFAF"
              />
              <stop
                offset="0.832491"
                stop-color="#B89F8C"
              />
              <stop
                offset="0.933497"
                stop-color="#CEBCAF"
              />
              <stop
                offset="1"
                stop-color="#E2D7CF"
              />
            </lineargradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(242.612 316.106) rotate(108.435) scale(38.6064)"
              gradientUnits="userSpaceOnUse"
              id="paint15_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#F1FFB7"
              />
              <stop
                offset="0.25"
                stop-color="#B9DC4E"
              />
              <stop
                offset="0.645065"
                stop-color="#6FB12F"
              />
              <stop
                offset="1"
                stop-color="#3E6419"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(237.916 346.73) rotate(-90) scale(15.2069 30.0517)"
              gradientUnits="userSpaceOnUse"
              id="paint16_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#3E6419"
              />
              <stop
                offset="1"
                stop-color="#3E6419"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(238.64 325.73) rotate(97.8153) scale(37.2773)"
              gradientUnits="userSpaceOnUse"
              id="paint17_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.446038"
                stop-color="white"
                stop-opacity="0"
              />
              <stop
                offset="0.841379"
                stop-color="white"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(297.643 262.106) rotate(108.435) scale(38.6064)"
              gradientUnits="userSpaceOnUse"
              id="paint18_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#BCF2FF"
              />
              <stop
                offset="0.25"
                stop-color="#4ECBFF"
              />
              <stop
                offset="0.645065"
                stop-color="#0083F5"
              />
              <stop
                offset="1"
                stop-color="#C955FF"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(292.947 292.73) rotate(-90) scale(15.2069 30.0517)"
              gradientUnits="userSpaceOnUse"
              id="paint19_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#DEB3FF"
              />
              <stop
                offset="1"
                stop-color="#CC99FF"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(293.671 271.73) rotate(97.8153) scale(37.2773)"
              gradientUnits="userSpaceOnUse"
              id="paint20_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.446038"
                stop-color="white"
                stop-opacity="0"
              />
              <stop
                offset="0.841379"
                stop-color="white"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(360.285 315.994) rotate(108.435) scale(38.6064)"
              gradientUnits="userSpaceOnUse"
              id="paint21_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.0677083"
                stop-color="#FFE39A"
              />
              <stop
                offset="0.25"
                stop-color="#FFB900"
              />
              <stop
                offset="0.645065"
                stop-color="#E68400"
              />
              <stop
                offset="1"
                stop-color="#FFB900"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(356.313 325.618) rotate(97.8153) scale(37.2773)"
              gradientUnits="userSpaceOnUse"
              id="paint22_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.446038"
                stop-color="white"
                stop-opacity="0"
              />
              <stop
                offset="0.841379"
                stop-color="white"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(417.408 174.827) rotate(120.689) scale(50.6736 50.6736)"
              gradientUnits="userSpaceOnUse"
              id="paint23_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.103226"
                stop-color="#F4A0C3"
              />
              <stop
                offset="0.322917"
                stop-color="#F481B1"
              />
              <stop
                offset="0.510417"
                stop-color="#F272A7"
              />
              <stop
                offset="0.78125"
                stop-color="#EB70A3"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(417.762 170.93) rotate(104.486) scale(39.6562 39.6562)"
              gradientUnits="userSpaceOnUse"
              id="paint24_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#FFBCD8"
              />
              <stop
                offset="0.806053"
                stop-color="#FFBCD8"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(413.399 182.51) rotate(97.8153) scale(47.5979 47.5979)"
              gradientUnits="userSpaceOnUse"
              id="paint25_radial_3061_1044"
              r="1"
            >
              <stop
                offset="0.446038"
                stop-color="white"
                stop-opacity="0"
              />
              <stop
                offset="0.841379"
                stop-color="white"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(412.475 209.324) rotate(-90) scale(19.4171 38.3719)"
              gradientUnits="userSpaceOnUse"
              id="paint26_radial_3061_1044"
              r="1"
            >
              <stop
                stop-color="#FFB3BB"
              />
              <stop
                offset="1"
                stop-color="#FE625D"
                stop-opacity="0"
              />
            </radialgradient>
          </defs>
        </svg>
      </div>
      <div
        style="font-size: 14px; font-weight: 700; font-family: Segoe UI; text-align: center;"
      >
        Couldn't load data
      </div>
      <div
        style="font-size: 12px; font-family: Segoe UI; text-align: center;"
      >
        Something went wrong and we couldn't get the page to display
      </div>
      <div
        style="font-size: 12px; font-family: Segoe UI; text-align: center;"
      >
        Error code: 
        No data
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 2`] = `
<div>
  <div
    class=

        {
          display: flex;
          flex-direction: column;
          width: 100%;
        }
  >
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone175"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                one
              </span>
              <div
                hidden=""
                id="tooltip176"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                one
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              1,543
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone177"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="one"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=


                data-is-focusable="true"
                fill="#004b50"
                height="12"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone178"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                two
              </span>
              <div
                hidden=""
                id="tooltip179"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                two
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              800
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone180"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="two"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=


                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone181"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                three
              </span>
              <div
                hidden=""
                id="tooltip182"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                three
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              8,888
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone183"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="three"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=


                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render the Horizontal bar chart legend with string data 1`] = `
<div>
  <div
    class=

        {
          display: flex;
          flex-direction: column;
          width: 100%;
        }
  >
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone1"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                one
              </span>
              <div
                hidden=""
                id="tooltip2"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                one
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              1,543
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone3"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="one"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=


                data-is-focusable="true"
                fill="#004b50"
                height="12"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone4"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                two
              </span>
              <div
                hidden=""
                id="tooltip5"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                two
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              800
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone6"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="two"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=


                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class=

            {
              margin-bottom: 10px;
            }
      >
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone7"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  justify-content: space-between;
                }
          >
            <div
              class=
                  ms-TooltipHost
                  {
                    color: #323130;
                    display: block;
                    margin-bottom: 5px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                  }
              role="none"
            >
              <span
                data-is-focusable="false"
                role="text"
                tabindex="-1"
              >
                three
              </span>
              <div
                hidden=""
                id="tooltip8"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                three
              </div>
            </div>
            <div
              class=

                  {
                    color: #323130;
                    font-size: 14px;
                    font-weight: 600;
                  }
              data-is-focusable="false"
              role="text"
              tabindex="-1"
            >
              8,888
            </div>
          </div>
        </div>
        <div
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
              {
                padding-right: 0px;
              }
          data-focuszone-id="FocusZone9"
          data-tabster="{\\"uncontrolled\\": {}}"
        >
          <svg
            aria-label="three"
            class=

                {
                  display: block;
                  height: 12px;
                  overflow: visible;
                  width: 100%;
                }
            focusable="false"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=


                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class=


                data-is-focusable="false"
                fill="#edebe9"
                height="12"
                role="img"
                tabindex="-1"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;
